# beam-bpy

./: pyproject.toml
.github/workflows/: test-elixir.yml  test-python.yml
docs/: AGENTS.md  README.md
src/beam_bpy/: __init__.py  beam_server.py  erlang_variant.py
tests/: __init__.py
tests/elixir/: .formatter.exs  .gitignore  mix.exs  test_client.exs  test_helpers.exs  test_integration.exs  test_simple.exs
tests/elixir/config/: config.exs
tests/elixir/lib/beam_bpy/: handlers.ex  mocks.ex
tests/elixir/test/: test_client_test.exs  test_helper.exs  test_helpers.exs  test_integration_test.exs  test_simple_handlers_test.exs
