[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beam-bpy"
description = "Blender Python Erlang CNode interface for Beam"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bpy==4.5.2",
    "pyerlang>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.10",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
